[gd_scene load_steps=8 format=3 uid="uid://dwhj23thudjp8"]

[ext_resource type="Texture2D" uid="uid://b1c4v860bpc4i" path="res://Sprites/Enemies/Basic enemy-Sheet.png" id="1_36f5b"]
[ext_resource type="Script" path="res://Characters/land_enemy.gd" id="1_eshsu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etlms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3mru"]

[sub_resource type="Animation" id="Animation_e1wcm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k8m4c"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lppld"]
_data = {
"RESET": SubResource("Animation_e1wcm"),
"walk": SubResource("Animation_k8m4c")
}

[node name="LandEnemy" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 6
script = ExtResource("1_eshsu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_36f5b")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 9
shape = SubResource("RectangleShape2D_etlms")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_u3mru")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_lppld")
}

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2(11, 9)
target_position = Vector2(0, 17)
collision_mask = 2

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-11, 9)
target_position = Vector2(0, 17)
collision_mask = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
